# opencord

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2025-07-21-105058_create_users/: up.sql
migrations/2025-07-21-105729_create_servers/: up.sql
migrations/2025-07-21-105732_create_categories/: up.sql
migrations/2025-07-21-105738_create_channels/: up.sql
migrations/2025-07-21-105750_create_messages/: up.sql
migrations/2025-07-21-105757_create_roles/: up.sql
migrations/2025-07-21-105810_create_memberships/: up.sql
migrations/2025-07-21-112251_create_direct_messages/: up.sql
src/: main.rs  schema.rs
src/models/: category.rs  channel.rs  direct_message.rs  membership.rs  message.rs  mod.rs  role.rs  server.rs  user.rs
src/routes/: user.rs
