[package]
name = "opencord"
version = "0.1.0"
edition = "2024"

[dependencies]

# server
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }

# sql
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "tls-native-tls",
] }

# serde
serde = { version = "1.0.219", features = ["derive"] }

# dotenv
dotenvy = "0.15.7"

# diesel
diesel = { version = "2.2.0", features = [
    "postgres",
    "uuid",
    "chrono",
    "serde_json",
    "r2d2",
] }
uuid = { version = "1.17.0", features = ["serde"] }
serde_json = "1.0.141"
chrono = { version = "0.4", features = ["serde"] }
